HEAD only (unreleased)

  New Features

    - CMFDefault skins: Added members_delete_form.
      This adds a confirmation step to avoid accidental deletion of members.

    - DirectoryView and derived classes can now have metadata associated with
      them just like regular FSObject-derived objects can.

    - DirectoryView and derived classes: It is now possible to customize what 
      gets created to represent directories inside the directory view.
      Previously, the code had a fixed assumption that all directories on the 
      file system must turn into instances of 
      CMFCore.DirectoryView.DirectoryView(Surrogate). It is now possible to 
      register a class deriving from DirectoryView and have that be 
      instantiated instead.

    - ActionsTool: Added new way to define Actions.
      'CMF Action Category' objects can now be added to the portal_actions
      tool and 'CMF Action' objects to categories or subcategories. To
      migrate oldstyle Actions (ActionInformation objects) you can create a
      snapshot and re-import Actions using the portal_setup tool.

    - TypesTool: TypeInformation classes are now pluggable.
      Any class that implements the TypeInformation interface and is
      a registered meta type can now be used in the TypesTool.

  Bug Fixes

    - DublinCore and PortalFolder: Changed fallback in 'Type' method.
      The fallback is only necessary if the related type info is missing.

    - CMFCore.PortalContent: Wrong variable name in __call__ would blow up
      if no default view could be found for a piece of content.

  Others

    - The CMF now depends on Zope 2.8 / Five.

    - Non-release packages moved out of the /CMF/ repository package:
    
      o hotfixes moved to /CMF_Hotfixes
      
      o others (CMFStaging, CMFTracker, CMFWorkspaces) moved to
        /CMF_Extras/

    - CMFSetup: the import/export of portal types uses a new XML format
      that can hold arbitrary properties, to facilitate subclassing. The