@@ -2,6 +2,11 @@ HEAD only (unreleased)
 
   New Features
 
+    - CMFDefault browser: Added browser package and five_template.
+      This allows to use the main_template for forms generated by Five.
+
+    - CMFDefault skins: Added style_slot to main_template.
+
     - CMFDefault skins: Added members_delete_form.
       This adds a confirmation step to avoid accidental deletion of members.
 
